--- a/Dockerfile.old
+++ b/Dockerfile.old
@@ -7,13 +7,16 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PIP_NO_CACHE_DIR=off
 ENV PIP_DISABLE_PIP_VERSION_CHECK=on
 ENV PIP_DEFAULT_TIMEOUT=100
+ENV MONGODB_PATH=d790214:7w9jhD6LNwH89yrh@cluster0.yrlljeu.mongodb.net/chatbotdb
+ENV MONGODB_PORT=443
 
 RUN apt-get update
 RUN apt-get install -y python3 python3-pip python-dev build-essential python3-venv ffmpeg
 
 RUN mkdir -p /code
-COPY . /code
-WORKDIR /code 
+ADD . /code
+WORKDIR /code
 
 RUN pip3 install -r requirements.txt
-CMD python3 bot/bot.py
+
+CMD python /code/bot.py
