--- a/config/config.yml
+++ b/config/config.yml
@@ -1,6 +1,7 @@
 telegram_token: "6144727854:AAG3aC1gDIS68-3lsSvRYZhK-JxSOe6QGZ4"
 #openai_api_key: "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"
-openai_api_key: "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"
+#openai_api_key: "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"
+openai_api_key: "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"
 
 use_chatgpt_api: true
 allowed_telegram_usernames: []  # if empty, the bot is available to anyone. pass a username string to allow it and/or user ids as integers
