--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
 
   chatgpt_telegram_bot:
-    container_name: chatgpt_telegram_bot
+    container_name: group10chatbot
     command: python3 bot/bot.py
     restart: always
     build:
