--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
 # Path where to store MongoDB
-MONGODB_PATH=d790214:7w9jhD6LNwH89yrh@cluster0.yrlljeu.mongodb.net/chatbotdb
+MONGODB_PATH=d790214:7w9jhD6LNwH89yrh@cluster0.yrlljeu.mongodb.net/group19_telegram_bot
 # MongoDB port
 MONGODB_PORT=443
