--- a/.github/workflows/main_group19chatbot.yml
+++ b/.github/workflows/main_group19chatbot.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: https://group19bottest01.azurecr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_e6bd0e1357b94307a37dc890b1cf8ce5 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_8815788517a54135b747b0150cd7225d }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_8b8af2266599468487a12d51797591e5 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_3f8ec955065e4938969491851e2f2a97 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: group19bottest01.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_e6bd0e1357b94307a37dc890b1cf8ce5 }}/group19bottest01image:${{ github.sha }}
+        tags: group19bottest01.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_8b8af2266599468487a12d51797591e5 }}/group19bottest01/group19bottest01image:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'group19chatbot'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_d632d7e41616456aa3cad2e7f0c0253f }}
-        images: 'group19bottest01.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_e6bd0e1357b94307a37dc890b1cf8ce5 }}/group19bottest01image:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_5241e952107c4578802ce49b8643ec16 }}
+        images: 'group19bottest01.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_8b8af2266599468487a12d51797591e5 }}/group19bottest01/group19bottest01image:${{ github.sha }}'
