--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,15 +1,20 @@
 name: Publish Docker image
 
 on:
+  push:
+    branches: [ main]
+  pull_request:
+    branches: [ main]
   release:
     types: [published]
 
 jobs:
   build:
-    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+
     steps:
-        uses: actions/checkout@v3    
+      - name: Push Docker image to Docker Hub
+      - uses: actions/checkout@v3    
       - name: Log in to Docker Hub
         env:
           DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}
