--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,16 +1,15 @@
-name: Publish Docker image
+name: Docker Image CI
 
 on:
   push:
-    branches:
-      - 'man'
 
-
+  tags:
+      - 'v*.*.*'
 jobs:
   build:
     runs-on: ubuntu-latest
 
-     steps:
+    steps:
       -
         name: Checkout 
         uses: actions/checkout@v2
@@ -19,7 +18,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD}}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -30,5 +29,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/group19botdocker
-
+          tags: ${{ secrets.DOCKER_USERNAME }}/group19botdocker:${{github.ref_name }}
